# drf_project

./: .gitignore  pyproject.toml
config/: celery.py  settings.py  urls.py
users/: models.py  urls.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_and_more.py
vehicle/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
vehicle/migrations/: 0001_initial.py  0002_moto.py  0003_milage.py  0004_alter_milage_car.py  0005_alter_milage_moto.py  0006_car_owner_moto_owner.py  0007_car_price.py
